--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,12 @@
-<!-- header.component.html -->
 <nav class="navbar">
     <div class="container">
-      <h1>Standup Application Interface</h1>
+      <h1>STANDUP APPLICATION INTERFACE</h1>
       <ul class="nav-links">
-        <li><a routerLink="/entry-form">Entry Form</a></li>
-        <li><a routerLink="/entry-list">Entries</a></li>
+        <li><a routerLink="/entry-form">ENTRY FORM</a></li>
+        <li><a routerLink="/entry-list">ENTRY LIST</a></li>
       </ul>
     </div>
   </nav>
-  
+
+
+
