--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-<!-- app.component.html -->
 
 <!-- Header Component -->
 <app-header></app-header>
 
-<!-- Main Content -->
+<main>
+
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+</main>
 
-<!-- Footer Component -->
-<app-footer></app-footer>
+
