--- a/src/app/entry-form/entry-form.component.css
+++ b/src/app/entry-form/entry-form.component.css
@@ -2,11 +2,12 @@ form {
   max-width: 400px;
   margin: 20px auto;
   padding: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #bcaeae;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color:#dcd1cf;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
+  
 }
 
 form div {
@@ -17,7 +18,7 @@ label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #333;
+  color: black;
   font-size: 14px;
 }
 
@@ -74,8 +75,13 @@ textarea {
   min-height: 100px;
 }
 
-/* Specific styles to ensure consistency */
+Specific styles to ensure consistency 
 input[type="text"],
 input[type="number"] {
-  width: calc(100% - 22px); /* Adjust to match the padding and border */
+  width: calc(100% - 22px); 
+} 
+.container{
+  color: #000;
+  margin-left: 2px;
 }
+
