--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,8 @@
-<nav class="navbar">
-    <div class="container">
-      <h1>STANDUP APPLICATION INTERFACE</h1>
-      <ul class="nav-links">
-        <li><a routerLink="/entry-form">ENTRY FORM</a></li>
-        <li><a routerLink="/entry-list">ENTRY LIST</a></li>
-      </ul>
-    </div>
-  </nav>
-
-
-
+<nav class="sidebar">
+  <h1 class="app-title">TASK MANAGEMENT</h1>
+  <ul class="nav-links">
+    <li><a routerLink="/entry-form"><button>+ New Task</button></a></li>
+    <li><a routerLink="/entry-list"><button>My Task</button></a></li>
+    
+  </ul>
+</nav>
