--- a/src/app/entry-form/entry-form.component.css
+++ b/src/app/entry-form/entry-form.component.css
@@ -8,7 +8,13 @@ form {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
   
+  
 }
+
+body {
+  background-color: black 
+}
+
 
 form div {
   margin-bottom: 15px;
